server/k8s/production/gce-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: learnerds-ingress
  namespace: default
  annotations:
    # This tells Google Cloud to associate the External Load Balancer with the static IP which we created earlier
    kubernetes.io/ingress.class: gce
    kubernetes.io/ingress.global-static-ip-name: web-ip
    networking.gke.io/managed-certificates: my-certificate
spec:
  rules:
  - host: api.learnerds.online
    http:
      paths:
      - path: /api/
        pathType: Prefix
        backend:
          service:
            name: api-gateway
            port:
              number: 8000
      - path: /media/
        pathType: Prefix
        backend:
          service:
            name: api-gateway
            port:
              number: 8000
      - path: /ws/
        pathType: Prefix
        backend:
          service:
            name: channel-service
            port:
              number: 8004
